--- a/tes.html
+++ b/tes.html
@@ -1,1 +1,28 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
+  <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1" media="(device-height: 568px)">
+  <meta http-equiv="Content-Language" content="en">
+  <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/apple-touch-icon-114-precomposed.png">
+  <meta name="google-analytics" content="UA-3769691-2">
+    <meta name="browser-stats-url" content="https://api.github.com/_private/browser/stats">
+  <meta name="theme-color" content="#f5f5f5">
+
+  
+  <meta content="mobile" name="octolytics-dimension-device" />
+  
+  
+
+  <title> DJLNR'S GitHub · Build software better, together!!</title>
+
+</head>
+<body class="">
+
+
+yagga
+
+</body>
+</html>
